# dina-network

./: .dockerignore  .gcloudignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.cli  License.md  README.md  cleanup-chain.sh  container-spec-single.yaml  container-spec.yaml  deny.toml  deploy-script.sh  docker-compose.yml  genesis.json  package.json
.github/workflows/: ci.yml
benches/: crypto_bench.rs  state_bench.rs
bridges/: README.md
bridges/base-bridge/: .env.example  README.md  hardhat.config.ts  package.json  tsconfig.json
bridges/swap/: README.md
cli/: Cargo.toml
cli/src/: config_manager.rs  main.rs  rpc_client.rs  wallet_manager.rs
contracts/bridge-across/: Cargo.toml
contracts/bridge-axelar/: Cargo.toml
contracts/bridge-axelar/src/: lib.rs
contracts/bridge-base/: Cargo.toml
contracts/bridge-cctp/: Cargo.toml
contracts/bridge-cctp/src/: lib.rs
contracts/bridge-layerzero/: Cargo.toml
contracts/bridge-stargate/: Cargo.toml
contracts/bridge-usdc/: Cargo.toml
contracts/bridge-wormhole/: Cargo.toml
contracts/defi-lending/: Cargo.toml
contracts/defi-vault/: Cargo.toml
contracts/dev-events/: Cargo.toml
contracts/dev-factory/: Cargo.toml
contracts/dev-multicall/: Cargo.toml
contracts/dev-timelock/: Cargo.toml
contracts/dex-swap/: Cargo.toml
contracts/dina-currency-registry/: Cargo.toml
contracts/dina-fx-swap/: Cargo.toml
contracts/dina-stablecoin-factory/: Cargo.toml
contracts/dina-yield-vault/: Cargo.toml
contracts/drc1-token/: Cargo.toml
contracts/drc10-royalties/: Cargo.toml
contracts/drc101-agent-wallet/: Cargo.toml
contracts/drc102-capability/: Cargo.toml
contracts/drc103-service-agreement/: Cargo.toml
contracts/drc104-swarm/: Cargo.toml
contracts/drc105-sensor-attestation/: Cargo.toml
contracts/drc106-data-market/: Cargo.toml
contracts/drc107-reputation/: Cargo.toml
contracts/drc108-resource/: Cargo.toml
contracts/drc109-emergency-stop/: Cargo.toml
contracts/drc11-semi-fungible/: Cargo.toml
contracts/drc110-firmware/: Cargo.toml
contracts/drc111-smart-wallet/: Cargo.toml
contracts/drc111-smart-wallet/src/: lib.rs
contracts/drc112-view-keys/: Cargo.toml
contracts/drc113-relay/: Cargo.toml
contracts/drc12-vault/: Cargo.toml
crates/dina-bench/: Cargo.toml
crates/dina-bench/benches/: crypto_bench.rs  state_bench.rs
crates/dina-bench/src/: lib.rs
crates/dina-bench/tests/: e2e_tests.rs
crates/dina-bridge/: Cargo.toml
crates/dina-bridge/src/: attestation.rs  cctp.rs  lib.rs  types.rs
crates/dina-consensus/: Cargo.toml
crates/dina-consensus/src/: leader.rs  lib.rs  turbobft.rs  view_change.rs  vote.rs
crates/dina-consensus/tests/: consensus_tests.rs
crates/dina-core/: Cargo.toml
crates/dina-core/src/: aa.rs  account.rs  block.rs  chain.rs  config.rs  crypto.rs  device.rs  error.rs  event.rs  executor.rs  fees.rs  governance.rs  lib.rs  limits.rs  merkle.rs  metrics.rs  parallel_executor.rs  rate_limit.rs  registry.rs  security.rs  transaction.rs  types.rs  validator.rs  yield_calc.rs
crates/dina-core/tests/: integration_tests.rs
crates/dina-explorer/: Cargo.toml
crates/dina-explorer/src/: api.rs  indexer.rs  lib.rs  models.rs  server.rs
crates/dina-faucet/: Cargo.toml
crates/dina-faucet/src/: faucet.rs  lib.rs  server.rs
crates/dina-mcp/: Cargo.toml
crates/dina-mcp/src/: device.rs  error.rs  handler.rs  lib.rs  server.rs  tools.rs
crates/dina-monitoring/: Cargo.toml
crates/dina-monitoring/src/: alerting.rs  dashboard.rs  health.rs  lib.rs  prometheus.rs
crates/dina-network/: Cargo.toml
crates/dina-network/src/: discovery.rs  gossip.rs  lib.rs  message.rs  node.rs  peer.rs  sync.rs
crates/dina-privacy/: Cargo.toml
crates/dina-privacy/src/: encrypted_memo.rs  lib.rs  permissions.rs  stealth.rs
crates/dina-privacy/tests/: integration_tests.rs
crates/dina-relay/: Cargo.toml
crates/dina-relay/src/: blob.rs  broadcaster.rs  error.rs  lib.rs  qr.rs  scanner.rs  stats.rs  submitter.rs
crates/dina-rpc/: Cargo.toml
crates/dina-rpc/src/: gas_estimator.rs  jsonrpc.rs  lib.rs  rate_limit.rs  rest.rs  server.rs  tx_pool.rs  websocket.rs
crates/dina-storage/: Cargo.toml
crates/dina-storage/src/: cache.rs  db.rs  lib.rs  migration.rs  pruner.rs  snapshot.rs  state.rs  tables.rs
crates/dina-storage/tests/: integration_tests.rs
crates/dina-wasm/: Cargo.toml
crates/dina-wasm/src/: cross_call.rs  events.rs  gas.rs  host.rs  lib.rs  metering.rs  runtime.rs  sandbox.rs  upgrade.rs
deployment/: gcp-testnet-deploy.sh
developer-portal/: firebase.json  package-lock.json  package.json
docs/: API_REFERENCE.md  ARCHITECTURE.md  BRIDGE_GUIDE.md  CHANGELOG.md  DEPLOYED_CONTRACTS.md  DEVELOPER_GUIDE.md  DRC_STANDARDS.md  PARALLEL_WALLET.md  SECURITY.md  SECURITY_AUDIT.md  SMART_CONTRACTS_GUIDE.md  SWARM_WALLET.md  TESTNET_GUIDE.md  VALIDATOR_GUIDE.md  WALLET_GUIDE.md  WHITEPAPER.md
examples/: demo-full-flow.js
examples/escrow/: Cargo.toml
examples/escrow/src/: lib.rs
examples/hello-world/: Cargo.toml
examples/hello-world/src/: lib.rs
examples/marketplace/: Cargo.toml
examples/marketplace/src/: lib.rs
examples/subscription/: Cargo.toml
examples/subscription/src/: lib.rs
examples/voting/: Cargo.toml
examples/voting/src/: lib.rs
explorer/: .firebaserc  app.js  firebase.json  index.html  styles.css
faucet-app/: app.js  index.html  styles.css
node/: Cargo.toml
node/src/: chain_state.rs  genesis.rs  main.rs  mempool.rs
proxy/: Dockerfile
proxy-ca/: Dockerfile
proxy-eu/: Dockerfile
proxy-usw/: Dockerfile
scripts/: benchmark.sh  create-test-wallets.sh  deploy-all-currencies.js  deploy-gcp.sh  deploy-hnlc.ts  deploy-stablecoins.js  deploy-testnet-update.sh  generate-keys.sh  local-testnet.sh  oracle-bot.js  setup-testnet-docker.sh  setup-testnet.sh  testnet-status.js
sdk/dina-py/: README.md  pyproject.toml
sdk/dina-py/src/dina/: __init__.py  client.py  contract.py  types.py  utils.py  wallet.py
tests/: e2e_tests.rs
wallet-app/: .firebaserc  firebase.json  package-lock.json  package.json
(+394 files in other folders)
