[workspace]
resolver = "2"
members = [
    "crates/dina-core",
    "crates/dina-channels",
    "crates/dina-consensus",
    "crates/dina-network",
    "crates/dina-wasm",
    "crates/dina-rpc",
    "crates/dina-storage",
    "crates/dina-privacy",
    "crates/dina-relay",
    "crates/dina-sdk",
    "crates/dina-sdk-macros",
    "node",
    "cli",
    "contracts/drc1-token",
    "contracts/drc2-device-identity",
    "contracts/drc101-agent-wallet",
    "contracts/drc102-capability",
    "contracts/drc103-service-agreement",
    "contracts/drc105-sensor-attestation",
    "contracts/drc107-reputation",
    "contracts/drc109-emergency-stop",
    "contracts/drc111-smart-wallet",
    "contracts/drc112-view-keys",
    "contracts/drc10-royalties",
    "contracts/drc11-semi-fungible",
    "contracts/drc12-vault",
    "contracts/drc13-compliant",
    "contracts/drc14-contract-sig",
    "contracts/drc15-meta-tx",
    "contracts/drc4-permit",
    "contracts/drc5-soulbound",
    "contracts/drc6-nft",
    "contracts/drc7-multi-token",
    "contracts/drc8-token-bound",
    "contracts/drc9-rental",
    "contracts/drc16-proxy",
    "contracts/drc17-hooks",
    "contracts/drc18-scriptable",
    "contracts/drc104-swarm",
    "contracts/drc106-data-market",
    "contracts/drc108-resource",
    "contracts/drc110-firmware",
    "contracts/drc113-relay",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Sebastian Borjas <sebastian@lucilla.app>"]
description = "Dina Network — Rust blockchain for agent & robotics payments"

[workspace.dependencies]
# Cryptography
ed25519-dalek = { version = "2.1", features = ["serde", "rand_core"] }
x25519-dalek = { version = "2.0", features = ["serde", "static_secrets"] }
sha2 = "0.10"
chacha20poly1305 = "0.10"
rand = "0.8"
p256 = { version = "0.13", features = ["ecdsa"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-big-array = "0.5"
bincode = "1.3"
borsh = { version = "1.5", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Networking
libp2p = { version = "0.54", features = ["tcp", "noise", "yamux", "gossipsub", "mdns", "kad", "identify", "tokio", "macros"] }

# WASM
wasmtime = "29"

# Storage
redb = "2.4"

# API
axum = { version = "0.8", features = ["ws"] }
jsonrpsee = { version = "0.25", features = ["server", "client", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Merkle
rs_merkle = "1.4"

# Error handling
thiserror = "2"
anyhow = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Hex encoding
hex = "0.4"

# Testing
proptest = "1.5"
criterion = "0.5"
tempfile = "3"
