[workspace]
resolver = "2"
members = [
    "crates/dina-core",
    "crates/dina-bridge",
    "crates/dina-channels",
    "crates/dina-consensus",
    "crates/dina-network",
    "crates/dina-wasm",
    "crates/dina-rpc",
    "crates/dina-storage",
    "crates/dina-explorer",
    "crates/dina-privacy",
    "crates/dina-relay",
    "crates/dina-sdk",
    "crates/dina-sdk-macros",
    "node",
    "cli",
    "contracts/drc1-token",
    "contracts/drc2-device-identity",
    "contracts/drc101-agent-wallet",
    "contracts/drc102-capability",
    "contracts/drc103-service-agreement",
    "contracts/drc105-sensor-attestation",
    "contracts/drc107-reputation",
    "contracts/drc109-emergency-stop",
    "contracts/drc111-smart-wallet",
    "contracts/drc112-view-keys",
    "contracts/drc10-royalties",
    "contracts/drc11-semi-fungible",
    "contracts/drc12-vault",
    "contracts/drc13-compliant",
    "contracts/drc14-contract-sig",
    "contracts/drc15-meta-tx",
    "contracts/drc4-permit",
    "contracts/drc5-soulbound",
    "contracts/drc6-nft",
    "contracts/drc7-multi-token",
    "contracts/drc8-token-bound",
    "contracts/drc9-rental",
    "contracts/drc16-proxy",
    "contracts/drc17-hooks",
    "contracts/drc18-scriptable",
    "contracts/drc104-swarm",
    "contracts/drc106-data-market",
    "contracts/drc108-resource",
    "contracts/drc110-firmware",
    "contracts/drc113-relay",
    "contracts/drc31-agent-registry",
    "contracts/drc32-task-queue",
    "contracts/drc33-machine-learning",
    "contracts/drc34-energy-market",
    "contracts/drc35-fleet-manager",
    "contracts/drc36-supply-chain",
    "contracts/drc37-agent-communication",
    "contracts/drc38-bounty",
    "contracts/drc39-loyalty",
    "contracts/drc40-warranty",
    "contracts/drc41-scheduler",
    "contracts/drc42-reputation-oracle",
    "contracts/drc19-batch-transfer",
    "contracts/drc20-timelock",
    "contracts/drc21-multisig",
    "contracts/drc22-vesting",
    "contracts/drc27-payment-splitter",
    "contracts/drc28-crowdfund",
    "contracts/drc29-insurance",
    "contracts/drc30-identity-resolver",
    "contracts/drc23-oracle",
    "contracts/drc24-dao",
    "contracts/drc25-staking-pool",
    "contracts/drc26-access-control",
    "crates/dina-faucet",
    "crates/dina-mcp",
    "crates/dina-bench",
    "crates/dina-monitoring",
    "examples/hello-world",
    "examples/escrow",
    "examples/voting",
    "examples/subscription",
    "examples/marketplace",
    "contracts/drc43-payable-token",
    "contracts/drc44-flash-loan",
    "contracts/drc45-hybrid-token",
    "contracts/drc46-modular-account",
    "contracts/drc47-minimal-multi-token",
    "contracts/drc48-minimal-proxy",
    "contracts/drc49-contract-metadata",
    "contracts/drc50-pausable",
    "contracts/drc51-snapshot",
    "contracts/drc52-enumerable-nft",
    "contracts/drc53-wrapped-usdc",
    "contracts/drc54-agent-escrow",
    "contracts/drc55-device-mesh",
    "contracts/drc56-data-nft",
    "contracts/drc57-compute-marketplace",
    "contracts/drc58-autonomous-payment",
    "contracts/drc59-geo-fence",
    "contracts/drc60-token-bridge-escrow",
    "contracts/drc61-ai-inference",
    "contracts/drc62-device-twins",
    "contracts/drc73-embedding-registry",
    "contracts/drc74-agent-reputation-network",
    "contracts/drc75-conditional-payment",
    "contracts/drc76-agent-memory",
    "contracts/drc77-swarm-consensus",
    "contracts/drc78-device-attestation-chain",
    "contracts/drc79-micro-payment-stream",
    "contracts/drc80-task-decomposer",
    "contracts/drc81-cross-device-state",
    "contracts/drc82-agent-marketplace-v2",
    "contracts/drc63-swarm-wallet",
    "contracts/drc64-vector-index",
    "contracts/drc65-agent-swarm",
    "contracts/drc66-semantic-search",
    "contracts/drc67-multi-agent-escrow",
    "contracts/drc68-knowledge-graph",
    "contracts/drc69-agent-delegation",
    "contracts/drc70-model-marketplace",
    "contracts/drc71-collaborative-training",
    "contracts/drc72-device-cluster",
    "contracts/bridge-usdc",
    "contracts/bridge-cctp",
    "contracts/bridge-base",
    "contracts/bridge-wormhole",
    "contracts/bridge-layerzero",
    "contracts/bridge-axelar",
    "contracts/bridge-across",
    "contracts/bridge-stargate",
    "contracts/dex-swap",
    "contracts/defi-vault",
    "contracts/defi-lending",
    "contracts/dev-multicall",
    "contracts/dev-timelock",
    "contracts/dev-factory",
    "contracts/dev-events",
    "contracts/dina-stablecoin-factory",
    "contracts/dina-fx-swap",
    "contracts/dina-currency-registry",
    "contracts/dina-yield-vault",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Sebastian Borjas <sebastian@lucilla.app>"]
description = "Dina Network — Rust blockchain for agent & robotics payments"

[workspace.dependencies]
# Cryptography
ed25519-dalek = { version = "2.1", features = ["serde", "rand_core"] }
x25519-dalek = { version = "2.0", features = ["serde", "static_secrets"] }
sha2 = "0.10"
chacha20poly1305 = "0.10"
rand = "0.8"
p256 = { version = "0.13", features = ["ecdsa"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-big-array = "0.5"
bincode = "1.3"
borsh = { version = "1.5", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Networking
libp2p = { version = "0.54", features = ["tcp", "noise", "yamux", "gossipsub", "mdns", "kad", "identify", "tokio", "macros"] }

# WASM
wasmtime = "29"

# Storage
redb = "2.4"

# API
axum = { version = "0.8", features = ["ws"] }
jsonrpsee = { version = "0.25", features = ["server", "client", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Merkle
rs_merkle = "1.4"

# Error handling
thiserror = "2"
anyhow = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Hex encoding
hex = "0.4"

# Testing
proptest = "1.5"
criterion = "0.5"
tempfile = "3"
