[package]
name = "bridge-axelar"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde-big-array = { workspace = true }
borsh = { workspace = true }
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]
