[package]
name = "bridge-cctp"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
borsh = { workspace = true }
sha2 = { workspace = true }
ed25519-dalek = { workspace = true }

[dev-dependencies]
rand = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]
