[package]
name = "drc111-smart-wallet"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
borsh = { workspace = true }
p256 = { version = "0.13", default-features = false, features = ["ecdsa", "pkcs8"] }
sha2 = { version = "0.10", default-features = false }

[lib]
crate-type = ["cdylib"]
