[package]
name = "dina-core"
version.workspace = true
edition.workspace = true

[dependencies]
ed25519-dalek = { workspace = true }
x25519-dalek = { workspace = true }
sha2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde-big-array = { workspace = true }
bincode = { workspace = true }
borsh = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
rs_merkle = { workspace = true }
