[package]
name = "dina-faucet"
version.workspace = true
edition.workspace = true

[dependencies]
dina-core = { path = "../dina-core" }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tower = { workspace = true }
