[package]
name = "dina-mcp"
version.workspace = true
edition.workspace = true

[dependencies]
dina-core = { path = "../dina-core" }
dina-channels = { path = "../dina-channels" }
dina-privacy = { path = "../dina-privacy" }
serde = { workspace = true }
serde_json = { workspace = true }
serde-big-array = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
hex = { workspace = true }
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
reqwest = { workspace = true }
