[package]
name = "dina-monitoring"
version.workspace = true
edition.workspace = true

[dependencies]
dina-core = { path = "../dina-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tower = { workspace = true }
