[package]
name = "dina-network"
version.workspace = true
edition.workspace = true

[dependencies]
dina-core = { path = "../dina-core" }
libp2p = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde-big-array = { workspace = true }
