[package]
name = "dina-privacy"
version.workspace = true
edition.workspace = true

[dependencies]
dina-core = { path = "../dina-core" }
ed25519-dalek = { workspace = true }
x25519-dalek = { workspace = true }
sha2 = { workspace = true }
chacha20poly1305 = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
