[package]
name = "dina-rpc"
version.workspace = true
edition.workspace = true

[dependencies]
dina-core = { path = "../dina-core" }
dina-monitoring = { path = "../dina-monitoring" }
axum = { workspace = true }
jsonrpsee = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
