[package]
name = "dina-rpc"
version.workspace = true
edition.workspace = true

[dependencies]
dina-core = { path = "../dina-core" }
dina-monitoring = { path = "../dina-monitoring" }
axum = { workspace = true }
axum-server = { version = "0.7", features = ["tls-rustls-no-provider"], default-features = false }
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
jsonrpsee = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
