[package]
name = "dina-storage"
version.workspace = true
edition.workspace = true

[dependencies]
dina-core = { path = "../dina-core" }
redb = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tempfile = { workspace = true }
