[package]
name = "dina-wasm"
version.workspace = true
edition.workspace = true

[dependencies]
dina-core = { path = "../dina-core" }
dina-storage = { path = "../dina-storage" }
wasmtime = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
ed25519-dalek = { workspace = true }
