[package]
name = "example-escrow"
version.workspace = true
edition.workspace = true
description = "USDC escrow contract for secure two-party deals on Dina Network"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
borsh = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]
