[project]
name = "dina-sdk"
version = "0.1.0"
description = "Python SDK for Dina Network"
requires-python = ">=3.9"
dependencies = ["cryptography>=41.0", "httpx>=0.25"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
where = ["src"]
