[project]
name = "dina-network"
version = "0.1.0"
description = "Python SDK for Dina Network — the fastest blockchain with swarm wallets, parallel execution, and 82 DRC standards"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "Sebastian Borjas", email = "s.borjas@lucilla.ca"}]
keywords = ["dina", "blockchain", "sdk", "wallet", "usdc", "web3", "agent", "swarm", "iot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = ["cryptography>=41.0", "httpx>=0.25"]

[project.urls]
Homepage = "https://github.com/superbigroach/dina-network"
Repository = "https://github.com/superbigroach/dina-network"
Documentation = "https://github.com/superbigroach/dina-network/tree/main/developer-portal"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
